# mini_chem

./: .gitignore  CMakeLists.txt
cmake/: compilers.cmake
interface/: CMakeLists.txt  mini_chem.cpp  mini_chem.h  mini_chem.h.in  mini_chem.hpp
src_mini_chem_dlsode/: CMakeLists.txt
tests/: CMakeLists.txt  test_mini_chem_dlsode.cpp
